--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,14 @@
   <body>
     <div class="container">
       <div class="grow-buttons">
-        <button class="btn-success" id="feed">Add soil</button>
+        <button class="btn-success" id="soil">Add soil</button>
+        <button class="btn-success" id="water">Add water</button>
         <button class="btn-success" id="show-state">Current Stats</button>
       </div>
       <h1>Your Plant's Values</h1>
       <h3><div id="soil-value">0</div></h3>
+      <h3><div id="water-value">0</div></h3>
+      <h3><div id="state-value"></div></h3>
     </div>
   </body>
 </html>
